client/src/App.css
/* FONTS */
body {
  font-size: .875rem;
}

.feather {
  width: 16px;
  height: 16px;
  vertical-align: text-bottom;
}

.main-bg {
  background-color: #F7F7F8;
}

/*
 * Sidebar
 */

.sidebar {
  position: fixed;
  top: 0;
  /* rtl:raw:
  right: 0;
  */
  bottom: 0;
  left: 0;
  z-index: 100; /* Behind the navbar */
  padding: 48px 0 0; /* Height of navbar */
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

@media (max-width: 767.98px) {
  .sidebar {
    top: 5rem;
  }
}
.sidebar {
  background-image: url(https://images2.alphacoders.com/135/1355608.png);
  background-color:#272828;
}

/* sidebar dark layer */
.sidebar:before {
  opacity: 0.33;
  background-color: #272828;
}
.sidebar[data-color=black]:after {
    background: #292929;
    background: linear-gradient(180deg, #292929, #0e0e0e);
    background-size: 150% 150%; 
    opacity: 0.6;
  }
.sidebar:after, .sidebar:before {
    display: block;
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 2;
}


/* prioritize menu layer */
.side-content {
  position: relative;
  z-index: 4;
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  padding-top: .5rem;
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

.logo {
    padding: 10px 5px;
    margin: 0 20px;
    border-bottom: 1px solid hsla(0, 0%, 100%, .2);
    position: relative;
}

.sidebar .nav-link {
  font-weight: 500;
  color: white;
}

.sidebar .nav-link:hover {
  color: wheat;
}

.side-icon {
  float: left;
  font-size: 24px;
}
.head-icon {
  float: right;
  font-size: 24px;
}
.sensor-icon {
  font-size: 50px;
}
.login-icon {
  font-size: 20px;
}

.sidebar .nav-link .feather {
  margin-right: 4px;
  /* color: #727272; */
  color: white;
}

.sidebar .nav-link.active {
  /* color: #2470dc; */
  color: wheat;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
  color: inherit;
}

.sidebar-heading {
  font-size: .75rem;
  text-transform: uppercase;
}

/*
 * Navbar
 */

.navbar-brand {
  padding-top: .75rem;
  padding-bottom: .75rem;
  font-size: 1rem;
  background-color: rgba(0, 0, 0, .25);
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
}

.navbar .navbar-toggler {
  top: .25rem;
  right: 1rem;
}

.navbar .form-control {
  padding: .75rem 1rem;
  border-width: 0;
  border-radius: 0;
}

.form-control-dark {
  color: #fff;
  background-color: rgba(255, 255, 255, .1);
  border-color: rgba(255, 255, 255, .1);
}

.form-control-dark:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

.header-box {
  overflow: hidden;
}
/* Cards */
.card-footer {
  background-color: transparent !important;
}
.card-category {
  height: 5vh;
}
.card-stats {
  margin-bottom: 2rem;
  height: 25vh !important;
}

